# NateOS

./: Cargo.toml  Makefile  README.md  build.rs  linker.ld  x86_64-nateos.json
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
scripts/: build.sh  deploy.sh  test.sh
src/: alloc.rs  boot.rs  interrupts.rs  io.rs  ipc.rs  lib.rs  main.rs  memory.rs  process.rs  scheduler.rs  sync.rs  syscall.rs  timer.rs
src/containers/: cgroup.rs  mod.rs  namespace.rs  runtime.rs
src/drivers/: ata.rs  driver.rs  keyboard.rs  mod.rs  vga.rs
src/fs/: acl.rs  block.rs  encryption.rs  filesystem.rs  inode.rs  journal.rs  lvm.rs  mod.rs  nfs.rs  raid.rs
src/hardware/: acpi.rs  mod.rs  pci.rs  power.rs  thermal.rs  usb.rs
src/memory/: compression.rs  huge_pages.rs  numa.rs  oom.rs  slab.rs  swap.rs  vmm.rs
src/net/: driver.rs  ethernet.rs  firewall.rs  firewall_advanced.rs  ip.rs  ipv6.rs  mod.rs  socket.rs  tcp.rs  tls.rs  udp.rs  vpn.rs
src/performance/: cache.rs  io_scheduler.rs  mod.rs  profiler.rs  scheduler_opt.rs
src/production/: hardening.rs  mod.rs  monitoring.rs  optimization.rs
src/security/: aslr.rs  audit.rs  capabilities.rs  cfi.rs  ids.rs  mac.rs  mod.rs  random.rs  secure_boot.rs  stack_protection.rs
src/services/: cron.rs  init.rs  mod.rs  service.rs  syslog.rs
src/stability/: deadlock_detector.rs  error_handler.rs  mod.rs  resource_monitor.rs  watchdog.rs
src/testing/: fuzzer.rs  memory_checker.rs  mod.rs  stress.rs  test_framework.rs
src/tools/: debugger.rs  mod.rs  modules.rs  tracing.rs
(+5 files in other folders)
